--- a/src/resources/employee-onboarding.fxml
+++ b/src/resources/employee-onboarding.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -48,6 +49,21 @@
             <Insets top="10.0" />
          </VBox.margin>
       </Button>
+      <CheckBox fx:id="fastModeCheckBox" mnemonicParsing="false" onAction="#handleFastModeToggle" text="Part Timer (1 Minute Shift)" textFill="WHITE">
+         <VBox.margin>
+            <Insets top="5.0" />
+         </VBox.margin>
+      </CheckBox>
+      <CheckBox fx:id="unacceptableMistakesCheckBox" mnemonicParsing="false" onAction="#handleMistakesToggle" text="Unacceptable Mistakes (No Strikes Allowed)" textFill="WHITE">
+         <VBox.margin>
+            <Insets top="5.0" />
+         </VBox.margin>
+      </CheckBox>
+      <CheckBox fx:id="rushhourCheckBox" mnemonicParsing="false" onAction="#handleRushHourToggle" text="Rush Hour (10 Seconds Max per Client)" textFill="WHITE">
+         <VBox.margin>
+            <Insets top="5.0" />
+         </VBox.margin>
+      </CheckBox>
 
       <!-- Go Home Button -->
       <Button fx:id="goBackButton" onAction="#handleGoBackClick" text="Go Home">
@@ -55,7 +71,7 @@
             <Font size="24.0" />
          </font>
          <VBox.margin>
-            <Insets top="10.0" />
+            <Insets top="5.0" />
          </VBox.margin>
       </Button>
 
