--- a/src/resources/game-screen.fxml
+++ b/src/resources/game-screen.fxml
@@ -13,14 +13,25 @@
 
 <VBox fx:id="rootVBox" alignment="CENTER" prefHeight="668.0" prefWidth="1320.0" style="-fx-background-color: gray;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.GameScreenController">
    <children>
-      <Label fx:id="timerLabel" alignment="CENTER" prefHeight="88.0" prefWidth="326.0" text="10:00" textAlignment="CENTER">
-         <font>
-            <Font name="System Bold" size="36.0" />
-         </font>
-         <VBox.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </VBox.margin>
-      </Label>
+      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+         <children>
+            <Label text="Shift Time Remaining:">
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+            </Label>
+            <Label fx:id="timerLabel" alignment="CENTER" prefHeight="42.0" prefWidth="326.0" textAlignment="CENTER">
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
+               </VBox.margin>
+            </Label>
+            <Label fx:id="clientTimeRemainingLabel" text="Client Time Remaining:" visible="false" />
+            <Label fx:id="clientTimerLabel" text="test" visible="false" />
+         </children>
+      </VBox>
       <HBox alignment="CENTER" prefHeight="175.0" prefWidth="200.0">
          <children>
             <TextFlow fx:id="clientInfo" prefHeight="149.0" prefWidth="185.0" style="-fx-background-color: white;" textAlignment="CENTER">
