--- a/src/resources/game-screen.fxml
+++ b/src/resources/game-screen.fxml
@@ -92,7 +92,7 @@
                     </Button>
                <VBox prefHeight="218.0" prefWidth="172.0">
                   <children>
-                     <VBox prefHeight="200.0" prefWidth="100.0">
+                     <VBox prefHeight="207.0" prefWidth="172.0">
                         <children>
                            <TextFlow prefHeight="50.0" prefWidth="114.0" style="-fx-background-color: white;" textAlignment="CENTER">
                               <children>
@@ -109,7 +109,7 @@
                               </children>
                            </TextFlow>
             
-                                      <TextFlow fx:id="identification" prefHeight="111.0" prefWidth="172.0" style="-fx-background-color: white;" textAlignment="CENTER" />
+                                      <TextFlow fx:id="identification" prefHeight="90.0" prefWidth="172.0" style="-fx-background-color: white;" textAlignment="CENTER" />
                         </children>
                      </VBox>
                   </children>
@@ -120,12 +120,17 @@
                      <Insets right="5.0" />
                   </HBox.margin>
                </VBox>
-
-                    <TextFlow fx:id="balanceSheet" prefHeight="149.0" prefWidth="185.0" style="-fx-background-color: white;" textAlignment="CENTER">
+               <VBox alignment="TOP_CENTER" prefHeight="218.0" prefWidth="164.0">
+                  <children>
+                     <TextFlow prefHeight="10.0" prefWidth="100.0" style="-fx-background-color: white;" textAlignment="CENTER">
                         <children>
-                            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="BALANCE SHEET" />
+                                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="BALANCE SHEET" />
                         </children>
-                    </TextFlow>
+                     </TextFlow>
+      
+                          <TextFlow fx:id="balanceSheet" prefHeight="186.0" prefWidth="164.0" style="-fx-background-color: white;" textAlignment="CENTER" />
+                  </children>
+               </VBox>
                 </children>
             </HBox>
         </children>
