--- a/src/resources/game-over.fxml
+++ b/src/resources/game-over.fxml
@@ -3,19 +3,24 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox xmlns:fx="http://javafx.com/fxml" fx:controller="application.GameOverController"
-      alignment="CENTER" spacing="15" style="-fx-background-color: black;" prefWidth="600" prefHeight="500">
+<VBox alignment="CENTER" prefHeight="500" prefWidth="600" spacing="15" style="-fx-background-color: black;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1" fx:controller="application.GameOverController">
 
-    <Label fx:id="finalScoreLabel" text="Final Score: " style="-fx-font-size: 24px; -fx-text-fill: white;"/>
-    <Label fx:id="finalStrikesLabel" text="Strikes: " style="-fx-font-size: 18px; -fx-text-fill: white;"/>
-    <Label fx:id="highestScoreLabel" text="Highest Score: " style="-fx-font-size: 18px; -fx-text-fill: white;"/>
+    <Label fx:id="finalScoreLabel" style="-fx-font-size: 24px; -fx-text-fill: white;" text="Final Score: " />
+    <Label fx:id="finalStrikesLabel" style="-fx-font-size: 18px; -fx-text-fill: white;" text="Strikes: " />
+    <Label fx:id="highestScoreLabel" style="-fx-font-size: 18px; -fx-text-fill: white;" text="Highest Score: " />
+   <ImageView fitHeight="96.0" fitWidth="110.0" pickOnBounds="true" preserveRatio="true">
+      <image>
+         <Image url="@bossComplaining.gif" />
+      </image>
+   </ImageView>
     
-    <TextArea fx:id="allAttemptsArea" editable="false" wrapText="true" prefHeight="200"
-              style="-fx-font-size: 14px; -fx-control-inner-background: #1e1e1e; -fx-text-fill: white;"/>
+    <TextArea fx:id="allAttemptsArea" editable="false" prefHeight="200" style="-fx-font-size: 14px; -fx-control-inner-background: #1e1e1e; -fx-text-fill: white;" wrapText="true" />
 
-    <Button text="Play Again" onAction="#handlePlayAgain" style="-fx-font-size: 16px;"/>
-    <Button text="Main Menu" onAction="#handleMainMenu" style="-fx-font-size: 16px;"/>
-    <Button text="Exit" onAction="#handleExit" style="-fx-font-size: 16px;"/>
+    <Button onAction="#handlePlayAgain" style="-fx-font-size: 16px;" text="Play Again" />
+    <Button onAction="#handleMainMenu" style="-fx-font-size: 16px;" text="Main Menu" />
+    <Button onAction="#handleExit" style="-fx-font-size: 16px;" text="Exit" />
 </VBox>
